Fixed some issues loading textures/display names